<resources>
    <string name="app_name">Mirrors</string>

<<<<<<< HEAD
    <string name="login_verification">验证码</string>
    <string name="login_setpassword">设置密码</string>
    <string name="login_creataccount">创建账号</string>
    <string name="login_verificationcode">发送验证码</string>
    <string name="login_createaccount">创建账号</string>
    <string name="phonenumber">手机号</string>
    <string name="mainactivity_login">登陆</string>
    <string name="myshopcar_myshopcar">我的购物车</string>
    <string name="myshopcar_show_order">显示排序为 最新推荐</string>
    <string name="myshopcar_noneshop">您的购物车没有商品</string>

    <string name="activity_order_detail">订单详情</string>

    <string name="main_recycle_text">测试</string>
    <string name="pupwindowlistvewreturnhome">返回首页</string>


=======
    <string name="login_verification">驗證碼</string>
    <string name="login_setpassword">設置密碼</string>
    <string name="login_creataccount">創建賬號</string>
    <string name="login_verificationcode">發送驗證碼</string>
    <string name="login_createaccount">創建賬號</string>
    <string name="phonenum_input">手機號</string>
>>>>>>> feature/ZT_login布局文件后续


</resources>
