<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/background">
    <TextView
        android:layout_marginLeft="36px"
        android:id="@+id/mycar_tv"
        android:layout_marginTop="20px"
        android:textColor="#ffffff"
        android:text="@string/myshopcar_myshopcar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <ImageView

        android:layout_marginLeft="36px"
        android:layout_marginTop="20px"
        android:layout_toRightOf="@+id/mycar_tv"
        android:src="@mipmap/dowm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <ImageView
        android:id="@+id/shopcar_line"
        android:layout_marginLeft="36px"
        android:layout_marginTop="14px"
        android:layout_below="@+id/mycar_tv"
        android:src="@mipmap/line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginLeft="36px"
        android:layout_marginTop="24px"
        android:layout_below="@+id/shopcar_line"
        android:textColor="#ffffff"
        android:text="@string/myshopcar_show_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

<ImageView
    android:id="@+id/none"
    android:layout_marginTop="350px"
    android:layout_centerHorizontal="true"
    android:src="@mipmap/shopping_cart_none"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />
    <TextView
        android:layout_alignLeft="@+id/none"
        android:textColor="#ffffff"
        android:layout_below="@+id/none"
        android:layout_marginTop="30px"
        android:layout_centerHorizontal="true"
        android:text="@string/myshopcar_noneshop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</com.zhy.autolayout.AutoRelativeLayout>