<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f1f1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/create_margin"
        android:layout_marginRight="@dimen/create_margin"
        android:background="@color/login_background"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/create_margin"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/create_marginleft"
                android:text="@string/login_createaccount"
                android:textColor="@color/text_black"
                android:textSize="@dimen/create_createaccount_wordsize" />

            <ImageView
                android:id="@+id/create_close_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/create_marginleft"
                android:src="@mipmap/close" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/create_bar_iv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/create_marginleft"
            android:src="@mipmap/create_account_unline" />

        <TextView
            android:id="@+id/create_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/create_phone_wordsize"
            android:text="@string/phonenumber"
            android:textColor="@color/text_black"
            android:textSize="24px" />

        <!--android:text="@string/phonenumber"-->
        <!--android:text="@string/phonenum_input"-->
        <EditText
            android:id="@+id/create_phone_et"
            android:numeric="integer"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:background="@mipmap/phonenum_input" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/login_verification"
            android:textColor="@color/text_black"
            android:textSize="@dimen/create_verification_wordsize" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/create_margin"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/create_verification_et"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:numeric="integer"
                android:maxLines="1"
                android:background="@mipmap/verification_input" />

            <Button
                android:id="@+id/create_sendVerification_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/selector_create_account"
                android:gravity="center"
                android:text="@string/login_verificationcode"
                android:textColor="@color/text_white"
                android:textSize="@dimen/create_verificationcode_wordsize" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/create_margin"
            android:text="@string/login_setpassword"
            android:textColor="@color/text_black"
            android:textSize="@dimen/create_setpassword_wordsize" />

        <EditText
            android:id="@+id/create_password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:password="true"
            android:background="@mipmap/phonenum_input" />

        <Button
            android:id="@+id/create_btn_success"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/create_margin"
            android:background="@drawable/selector_create_account"
            android:gravity="center"
            android:text="@string/login_creataccount"
            android:textColor="@color/text_white"
            android:textSize="@dimen/create_creataccount_wordsize" />
    </LinearLayout>
</com.zhy.autolayout.AutoLinearLayout>
